tests/baselines/reference/classWithBaseClassButNoConstructor.errors.txt
==== tests/cases/compiler/classWithBaseClassButNoConstructor.ts (8 errors) ====
    class Base {
        constructor(x: number) { }
    }
    
    class C extends Base {
        foo: string;
    }
    
    var r = C;
    var c = new C(); // error
                ~
!!! classWithBaseClassButNoConstructor.ts(10,13): error TS2081: Supplied parameters do not match any signature of call target.
                ~
!!! classWithBaseClassButNoConstructor.ts(10,13): error TS2085: Could not select overload for 'new' expression.
    var c2 = new C(1); // ok
    
    class Base2<T,U> {
        constructor(x: T) { }
    }
    
    class D<T,U> extends Base2<T,U> {
        foo: U;
    }
    
    var r2 = D;
    var d = new D(); // error
                ~
!!! classWithBaseClassButNoConstructor.ts(22,13): error TS2081: Supplied parameters do not match any signature of call target.
                ~
!!! classWithBaseClassButNoConstructor.ts(22,13): error TS2085: Could not select overload for 'new' expression.
    var d2 = new D(1); // ok
    
    // specialized base class
    class D2<T, U> extends Base2<string, number> {
        foo: U;
    }
    
    var r3 = D2;
    var d3 = new D(); // error
                 ~
!!! classWithBaseClassButNoConstructor.ts(31,14): error TS2081: Supplied parameters do not match any signature of call target.
                 ~
!!! classWithBaseClassButNoConstructor.ts(31,14): error TS2085: Could not select overload for 'new' expression.
    var d4 = new D(1); // ok
    
    class D3 extends Base2<string, number> {
        foo: string;
    }
    
    var r4 = D3;
    var d5 = new D(); // error
                 ~
!!! classWithBaseClassButNoConstructor.ts(39,14): error TS2081: Supplied parameters do not match any signature of call target.
                 ~
!!! classWithBaseClassButNoConstructor.ts(39,14): error TS2085: Could not select overload for 'new' expression.
    var d6 = new D(1); // ok